<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fcfafa"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="10pt"
        android:textAlignment="center"
        android:textColor="@color/colorNegro"
        android:layout_marginLeft="10dp"
        android:padding="30dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="6pt"
        android:textAlignment="center"
        android:textColor="#fff"

        />
    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/java"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Introduccion"
        android:textSize="6pt"
        android:textAlignment="center"
        android:textColor="#fff"
        android:layout_weight="0.1"
        />

    <Button android:layout_height="wrap_content"
        android:background="#1afae7"
        android:id="@+id/btn_menu"
        android:text="@string/btn_menu"
        android:textColor="@color/colorNegro"
        android:textStyle="bold"
        android:layout_width="100dip"
        android:layout_gravity="center"


        />

</LinearLayout>